--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quam, sint optio quas quod laboriosam soluta a, impedit alias ad perferendis. Molestiae, accusantium aut. Optio neque eos at hic nostrum.</p>
 </body>
 </html>
